@@ -10,9 +10,10 @@ plugins {
     kotlin("jvm")
     id("jps-compatible")
     id("d8-configuration")
+    id("project-tests-convention")
 }
 
-// WARNING: Native target is host-dependent. Re-running the same build on another host OS may bring to a different result.
+// WARNING: Native target is host-dependent. Re-running the same build on another host OS may give a different result.
 val nativeTargetName = HostManager.host.name
 
 val antLauncherJar by configurations.creating
@@ -35,7 +36,7 @@ val atomicfuJvmClasspath by configurations.creating
 val atomicfuNativeKlib by configurations.creating {
     attributes {
         attribute(KotlinPlatformType.attribute, KotlinPlatformType.native)
-        // WARNING: Native target is host-dependent. Re-running the same build on another host OS may bring to a different result.
+        // WARNING: Native target is host-dependent. Re-running the same build on another host OS may give a different result.
         attribute(KotlinNativeTarget.konanTargetAttribute, nativeTargetName)
         attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         attribute(KotlinPlatformType.attribute, KotlinPlatformType.native)
@@ -81,34 +82,37 @@ dependencies {
 
     compileOnly(kotlinStdlib())
 
-    testApi(projectTests(":compiler:tests-common"))
-    testApi(projectTests(":compiler:test-infrastructure"))
-    testApi(projectTests(":compiler:test-infrastructure-utils"))
-    testApi(projectTests(":compiler:tests-compiler-utils"))
-    testApi(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":generators:test-generator"))
+    testApi(testFixtures(project(":compiler:tests-common")))
+    testApi(testFixtures(project(":compiler:test-infrastructure")))
+    testApi(testFixtures(project(":compiler:test-infrastructure-utils")))
+    testApi(testFixtures(project(":compiler:tests-compiler-utils")))
+    testApi(testFixtures(project(":compiler:tests-common-new")))
+    testImplementation(testFixtures(project(":generators:test-generator")))
     testApi(project(":plugins:plugin-sandbox"))
     testApi(project(":compiler:incremental-compilation-impl"))
-    testApi(projectTests(":compiler:incremental-compilation-impl"))
+    testApi(testFixtures(project(":compiler:incremental-compilation-impl")))
 
-    testImplementation(projectTests(":js:js.tests"))
+    testApi(testFixtures(project(":js:js.tests")))
     testImplementation(libs.junit4)
     testApi(kotlinTest())
 
     // Dependencies for Kotlin/Native test infra:
     if (!kotlinBuildProperties.isInIdeaSync) {
-        testImplementation(projectTests(":native:native.tests"))
+        testApi(testFixtures(project(":native:native.tests")))
     }
+    testImplementation(project(":compiler:ir.backend.native"))
     testImplementation(project(":native:kotlin-native-utils"))
+    testImplementation(testFixtures(project(":native:native.tests:klib-ir-inliner")))
+    testImplementation(project(":kotlin-util-klib-abi"))
     testImplementation(commonDependency("org.jetbrains.teamcity:serviceMessages"))
 
     // todo: remove unnecessary dependencies
     testImplementation(project(":kotlin-compiler-runner-unshaded"))
 
     testImplementation(commonDependency("commons-lang:commons-lang"))
-    testImplementation(projectTests(":compiler:tests-common"))
-    testImplementation(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":compiler:test-infrastructure"))
+    testApi(testFixtures(project(":compiler:tests-common")))
+    testApi(testFixtures(project(":compiler:tests-common-new")))
+    testApi(testFixtures(project(":compiler:test-infrastructure")))
     testCompileOnly("org.jetbrains.kotlinx:atomicfu:0.25.0")
 
     testApi(platform(libs.junit.bom))
@@ -141,6 +145,11 @@ dependencies {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
     }
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-iossimulatorarm64:0.25.0"){
+        attributes {
+            attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
+        }
+    }
     implicitDependencies("org.jetbrains.kotlinx:atomicfu-mingwx64:0.25.0"){
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
@@ -168,58 +177,83 @@ sourceSets {
     "main" { projectDefault() }
     "test" {
         projectDefault()
+        java.srcDirs("testFixtures")
         generatedTestDir()
     }
 }
 
 testsJar()
 
-projectTest(jUnitMode = JUnitMode.JUnit5) {
-    useJUnitPlatform {
-        // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
-        excludeTags("atomicfu-native")
+projectTests {
+    testTask(jUnitMode = JUnitMode.JUnit5) {
+        useJUnitPlatform {
+            // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
+            excludeTags("atomicfu-native")
+        }
+        useJsIrBoxTests(version = version, buildDir = layout.buildDirectory)
+
+        workingDir = rootDir
+
+        dependsOn(":dist")
+        dependsOn(atomicfuJsIrRuntimeForTests)
+
+        val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
+        val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
+        val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
+        val localAtomicfuCompilerPluginClasspath: FileCollection = atomicfuCompilerPluginForTests
+
+        doFirst {
+            systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
+            systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
+            systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+            systemProperty("atomicfu.compiler.plugin", localAtomicfuCompilerPluginClasspath.asPath)
+        }
     }
-    useJsIrBoxTests(version = version, buildDir = layout.buildDirectory)
 
-    workingDir = rootDir
-
-    dependsOn(":dist")
-    dependsOn(atomicfuJsIrRuntimeForTests)
-
-    val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
-    val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
-    val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
-
-    doFirst {
-        systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
-        systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
-        systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+    val inputTags = findProperty("kotlin.native.tests.tags")?.toString()
+    val tags = buildString {
+        append("atomicfu-native") // Include all tests with the "atomicfu-native" tag
+        if (inputTags != null) {
+            append("&($inputTags)")
+        }
     }
+
+    nativeTestTask(
+        taskName = "nativeTest",
+        tag = tags,
+        requirePlatformLibs = true,
+        customCompilerDependencies = listOf(atomicfuJvmClasspath),
+        customTestDependencies = listOf(atomicfuNativeKlib),
+        compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
+    ) {
+        val localAtomicfuNativeKlib: FileCollection = atomicfuNativeKlib
+        doFirst {
+            systemProperty("atomicfuNative.classpath", localAtomicfuNativeKlib.asPath)
+        }
+
+        // To workaround KTI-2421, we make these tests run on JDK 11 instead of the project-default JDK 8.
+        // Kotlin test infra uses reflection to access JDK internals.
+        // With JDK 11, some JVM args are required to silence the warnings caused by that:
+        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+    }
+
+    testGenerator("org.jetbrains.kotlin.generators.tests.GenerateAtomicfuTestsKt", doNotSetFixturesSourceSetDependency = true) {
+        javaLauncher.set(project.getToolchainLauncherFor(JdkMajorVersion.JDK_11_0))
+        dependsOn(":compiler:generateTestData")
+    }
+
+    withJvmStdlibAndReflect()
 }
 
 publish()
 standardPublicJars()
 
-val inputTags = findProperty("kotlin.native.tests.tags")?.toString()
-val tags = buildString {
-    append("atomicfu-native") // Include all tests with the "atomicfu-native" tag
-    if (inputTags != null) {
-        append("&($inputTags)")
-    }
-}
-val nativeTest = nativeTest(
-    taskName = "nativeTest",
-    tag = tags,
-    requirePlatformLibs = true,
-    customCompilerDependencies = listOf(atomicfuJvmClasspath),
-    customTestDependencies = listOf(atomicfuNativeKlib),
-    compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
-)
-
 tasks.named("check") {
     // Depend on the test task that launches Native tests so that it will also run together with tests
     // for all other targets if K/N is enabled
     if (kotlinBuildProperties.isKotlinNativeEnabled) {
-        dependsOn(nativeTest)
+        dependsOn(tasks.named("nativeTest"))
     }
 }
+
+
